# FormaC

./: .gitignore
advanced_llm_apps/private_knowledge_customer_service/: AGENTS.md  README.md  (+1 more)
advanced_llm_apps/private_knowledge_customer_service/backend/: alembic.ini  pyproject.toml
advanced_llm_apps/private_knowledge_customer_service/backend/app/: README.md  __init__.py  config.py  configuration.py  db.py  main.py  records.py  runtime.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/api/: ask.py  configuration.py  feishu.py  identities.py  profile.py  records.py  scans.py  search.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/customer_service/: __init__.py  answers.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/domain/: __init__.py  models.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/indexing/: __init__.py  raglite_writer.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/ingestion/: __init__.py  chunking.py  fingerprint.py  inventory.py  service.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/model_providers/: __init__.py  base.py  deepseek.py  ollama.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/permissions/: __init__.py  identities.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/privacy/: __init__.py  policy.py
advanced_llm_apps/private_knowledge_customer_service/backend/app/retrieval/: __init__.py  evidence.py  raglite_adapter.py  search_service.py  source_lookup.py
advanced_llm_apps/private_knowledge_customer_service/backend/migrations/: env.py
advanced_llm_apps/private_knowledge_customer_service/backend/migrations/versions/: 0001_initial_schema.py  0002_feishu_events.py  0003_interaction_records.py
advanced_llm_apps/private_knowledge_customer_service/backend/tests/: README.md  test_health.py  test_runtime.py  test_schema.py
advanced_llm_apps/private_knowledge_customer_service/backend/tests/api/: test_admin_config.py  test_admin_records.py  test_admin_users.py  test_app_profile.py  test_ask.py  test_feishu_api.py  test_original_search_api.py
advanced_llm_apps/private_knowledge_customer_service/backend/tests/channels/: test_feishu.py
(+94 files in other folders)
