[project]
name = "private-knowledge-customer-service"
version = "0.1.0"
description = "Local-first knowledge base and customer service backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.7,<3",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

