[project]
name = "private-knowledge-customer-service"
version = "0.1.0"
description = "Local-first knowledge base and customer service backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "pgvector>=0.3,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
