[project]
name = "private-knowledge-customer-service"
version = "0.1.0"
description = "Local-first knowledge base and customer service backend"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.10,<3",
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "pgvector>=0.3,<1",
    "psycopg[binary]>=3.2,<4",
    "pypdf>=5,<7",
    "pydantic-settings>=2.7,<3",
    "python-docx>=1.1,<2",
    "python-pptx>=1,<2",
    "openpyxl>=3.1,<4",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.34,<1",
    "raglite[pandoc]==0.2.1",
    "numba>=0.59,<1",
    "llvmlite>=0.42,<1",
    "numpy>=1.26.4,<2",
    "ollama>=0.6,<1",
    "xx-sent-ud-sm",
    "cryptography>=42,<47",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "reportlab>=4,<5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.sources]
xx-sent-ud-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_sent_ud_sm-3.7.0/xx_sent_ud_sm-3.7.0-py3-none-any.whl" }
